@@ -41,7 +41,11 @@
 	    tcp_setopt/2,		% +Socket, +Option
 	    tcp_host_to_address/2,	% ?HostName, ?Ip-nr
 	    tcp_select/3,		% +Inputs, -Ready, +Timeout
-	    gethostname/1		% -HostName
+	    gethostname/1,		% -HostName
+
+	    udp_socket/1,		% -Socket
+	    udp_receive/4,		% +Socket, -Data, -Sender, +Options
+	    udp_send/4			% +Socket, +Data, +Sender, +Options
 	  ]).
 :- use_module(library(shlib)).
 
